# SdrAntennaPatternPlotter

./: Cargo.toml  Readme.md  docker-compose.yaml
.docker/: dev.Dockerfile
assets/: index.html
frontend/: .gitignore  .npmrc  .prettierrc  eslint.config.js  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.css  app.html
frontend/src/lib/: BasicSettings.svelte  Calibration.svelte  Dbfs.svelte  Evaluation.svelte  FrequencyForm.svelte  GainPattern.svelte  MeasureButton.svelte  Measurement.svelte  Modal.svelte  common.ts  compass.svelte.ts  cubic_interpolation.ts  measured_values.svelte.ts  state.svelte.ts
frontend/src/lib/components/: BasicSettings.svelte  Button.svelte  Calibration.svelte  Dbfs.svelte  Evaluation.svelte  GainPattern.svelte  MeasureButton.svelte  Measurement.svelte  Notification.svelte  Progress.svelte
frontend/src/lib/components/gain_pattern/: Compass.svelte  Marker.svelte  PolarGrid.svelte  PolarPlot.svelte
frontend/src/routes/: +page.svelte
src/: cli.rs  data.rs  main.rs  rtl_power.rs  web.rs
