[package]
name = "sdr_gain_tool"
version = "0.1.0"
description = "Measure antenna patterns."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5.27", features = ["derive"] }
clap-port-flag = "0.4.0"
clap-verbosity-flag = "3.0.2"
futures = "0.3.31"
libc = "0.2.169"
rcgen = "0.13.2"
rtlsdr_mt = "2.2.0"
rustfft = "6.2.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
